# arbor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  release-please-config.json  test_install.ps1  test_install.sh  uninstall.ps1  uninstall.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  language_request.yml
.github/workflows/: ci-release-please.yml  ci.yml  release-please.yml  release.yml  sync-languages.yml  sync-tools.yml
crates/arbor-analyzers/: Cargo.toml
crates/arbor-analyzers/src/: code.rs  docs.rs  iac.rs  lib.rs  schema.rs
crates/arbor-analyzers/tests/: integration.rs
crates/arbor-core/: Cargo.toml
crates/arbor-core/src/: graph.rs  lib.rs  palace.rs  query.rs  skeleton.rs
crates/arbor-detect/: Cargo.toml
crates/arbor-detect/src/: lib.rs  markers.rs
crates/arbor-mcp/: Cargo.toml
crates/arbor-mcp/benches/: bench.rs
crates/arbor-mcp/src/: main.rs  tools.rs
crates/arbor-persist/: Cargo.toml
crates/arbor-persist/src/: hasher.rs  lib.rs  store.rs  watcher.rs
docs/: demo.tape
scripts/: install.sh  sync-tools.sh  test_install.ps1  test_sync_tools.sh
tests/fixtures/ansible-project/group_vars/: all.yml
tests/fixtures/ansible-project/inventory/: hosts
tests/fixtures/ansible-project/playbooks/: deploy.yml
tests/fixtures/ansible-project/roles/app/defaults/: main.yml
tests/fixtures/ansible-project/roles/app/tasks/: main.yml
tests/fixtures/ansible-project/roles/nginx/defaults/: main.yml
tests/fixtures/ansible-project/roles/nginx/tasks/: main.yml
tests/fixtures/ansible-project/roles/nginx/templates/: nginx.conf.j2
tests/fixtures/c-project/: client.c  server.c  types.h
tests/fixtures/csharp-project/: AuthService.cs  Models.cs  Program.cs
tests/fixtures/docs-project/: README.md  installation.md
tests/fixtures/go-project/: main.go
tests/fixtures/java-project/: pom.xml
tests/fixtures/java-project/src/main/java/com/example/: AuthService.java  Main.java  Models.java
tests/fixtures/kotlin-project/: build.gradle.kts
tests/fixtures/kotlin-project/src/main/kotlin/com/example/: AuthService.kt  Main.kt  Models.kt
tests/fixtures/mixed-project/: Cargo.toml
tests/fixtures/mixed-project/docs/: README.md
tests/fixtures/mixed-project/roles/deploy/tasks/: main.yml
tests/fixtures/mixed-project/src/: main.rs
tests/fixtures/python-project/: auth.py  main.py  models.py
tests/fixtures/rust-project/: Cargo.toml
tests/fixtures/rust-project/src/: auth.rs  main.rs  models.rs
tests/fixtures/schema-project/: api.proto  migrations.sql
tests/fixtures/terraform-project/: main.tf  variables.tf
tests/fixtures/ts-project/: tsconfig.json
tests/fixtures/ts-project/src/: auth.ts  index.ts  models.ts
