[workspace]
members = [
    "crates/arbor-core",
    "crates/arbor-detect",
    "crates/arbor-analyzers",
    "crates/arbor-persist",
    "crates/arbor-mcp",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
petgraph = { version = "0.8", features = ["serde-1"] }

