[package]
name = "arbor-analyzers"
version = "0.1.5"
edition = "2024"

[dependencies]
arbor-core = { path = "../arbor-core" }
arbor-detect = { path = "../arbor-detect" }
serde = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
serde_yaml = "0.9"
pulldown-cmark = "0.13"
regex = "1"
ignore = "0.4"
rayon = "1"
stacker = "0.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-java = "0.23.5"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
