[package]
name = "arbor-persist"
version = "0.1.6"
edition = "2024"

[dependencies]
arbor-core = { path = "../arbor-core" }
serde = { workspace = true }
anyhow = { workspace = true }
bincode = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.7"
ignore = "0.4"

[lints]
workspace = true
